# pronounce-web

./: .agentignore  .gitignore  BRAIN.md  INDEX.md  MAIN_APP_FILES.md  PROJECT_MAP.md  README.md  UNUSED_FILES.md  analysis_engine.py  analyze_vowels.ipynb  analyze_vowels.py  auth_routes.py  check_env.py  check_users_root.py  config.py  dashboard_routes.py  deploy_fetch.py  fix_notebook_issues.py  flask_app.py  gunicorn_config.py  index.html  missing_items.txt  models.py  moon_debug.txt  moon_filtered.txt  moon_result.txt  pyproject.toml  pyrefly.toml  readme.md  replace_audio.py  repro_error.txt  requirements.prod.txt  requirements.txt  requirements_vowels.txt  road_map.md  run_mypy.py  run_worker.bat  scaffolding.py  script.js  streamlit_app.py  (+8 more)
analysis_vowels/: final_thesis_data.csv  per_student_summary_vowels.csv  results_vowels.csv
archive/: analyze_silence.py  analyze_vowels.ipynb  analyze_vowels.py  optimize_trimming.py
audio/: index.json
deploy/: nginx.conf
docs/: analyse_vowel.md  audio_processing_v2.md  database_sync.md  deployment.md  deployment_guide.md  development.md  feature_password_security.md  postgres_setup_summary.md  readme.md  refactor_plan.md  road_map.md  smart_client_migration_plan.md  todo.md  working_with_antigravity.md
instance/: pronounce.db
logs/: pronounce.log.1  pronounce.log.10  pronounce.log.2  pronounce.log.3  pronounce.log.4  pronounce.log.5  pronounce.log.6  pronounce.log.7  pronounce.log.8  pronounce.log.9  session_admin_2026-01-16.jsonl  session_anna_2026-01-16.jsonl  session_eugene_2026-01-13.jsonl  (+5 more)
migrations/: env.py
(+116 files in other folders)
